# hytale-rpc-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  gui.rs  log_watcher.rs  main.rs  process.rs  rpc.rs  tray.rs
